--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,15 @@
 			<version>${log4j.version}</version>
 		</dependency>
 		
+		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-databind</artifactId>
+  		</dependency>
+  		<dependency>
+    		<groupId>com.fasterxml.jackson.core</groupId>
+    		<artifactId>jackson-core</artifactId>
+  		</dependency>
+  
 	</dependencies>
 
 	<build>
