--- a/src/main/resources/application-dev-tstqpd01.yaml
+++ b/src/main/resources/application-dev-tstqpd01.yaml
@@ -1,15 +1,18 @@
+application:
+  debug: false
+  save:
+    metrics:
+      filename: c:\Users\mickm\OneDrive\Documents\Development\Docker\mq-metrics\currentMetrics_04.json
 ibm:
   mq:
-    queueManager1: QMAP01
-    channel1: MQ.TLS.SVRCONN
-    connName1: localhost(1442)
     queueManager: TSTQPD01
-    channel: MQ.MONITOR.SSL
+    channel1: MQ.MONITOR.SSL
+    channel: MQ.MONITOR.SVRCONN
     connName: localhost(1414)
     sslCipherSpec: TLS_RSA_WITH_AES_256_CBC_SHA256
-    useSSL: true
-    user: 
-    password: 
+    useSSL: false
+    user: MQMon02
+    password: Passw0rd
     objects:
       queues:
         include: "*"
@@ -26,10 +29,10 @@ ibm:
     event:
       delayInMilliSeconds: 10000      
     security:
-      truststore: C:\ProgramData\IBM\MQ\qmgrs\QMAP01\ssl\qmap01jks.jks
+      truststore: C:\ProgramData\IBM\MQ\qmgrs\TSTQPD01\ssl\tstqpd01jks.jks
       truststore-password: Passw0rd
-      keystore: C:\ProgramData\IBM\MQ\qmgrs\QMAP01\ssl\qmap01jks.jks
-      keystore-password: Passw0rd
+      keystore: 
+      keystore-password: 
 management:
   endpoints:
     web:
@@ -44,9 +47,9 @@ info:
   app:
     name: MQ-Metrics
     description: IBM MQ Metrics
-    version: 1.0.0.3
+    version: 1.0.0.0
     java:
-      version: 1.8.0.0
+      version: 1.8.0.0    
 server:
   port:
-    8082
+    8083
