--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<artifactId>mq-metrics</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
-
+	
 	<name>MQ Metrics</name>
 	<description>Get MQ metrics using PCF</description>
 
@@ -26,6 +26,11 @@
 	</properties>
 
 	<dependencies>
+		<dependency>
+		    <groupId>junit</groupId>
+		    <artifactId>junit</artifactId>
+		    <version>4.12</version>
+		</dependency>
 	
 		<dependency>
 		      <groupId>javax.xml.bind</groupId>
@@ -91,6 +96,7 @@
     		<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-core</artifactId>
   		</dependency>
+
   
 	</dependencies>
 
