--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>maersk.com.mq.metrics</groupId>
 	<artifactId>mq-metrics</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>1.0.0.10</version>
 	<packaging>jar</packaging>
 	
 	<name>MQ Metrics</name>
