--- a/src/main/resources/application-dev-qmap01.yaml
+++ b/src/main/resources/application-dev-qmap01.yaml
@@ -1,6 +1,6 @@
 application:
   debug: false
-  debugLevel: INFO
+  debugLevel: DEBUG
   save:
     metrics:
      required: false
@@ -63,7 +63,7 @@ info:
   app:
     name: MQ-Metrics
     description: IBM MQ Metrics
-    version: 1.0.0.10
+    version: 1.0.0.11
     java:
       version: 1.8.0.0
 server:
