--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>maersk.com.mq.metrics</groupId>
 	<artifactId>mq-metrics</artifactId>
-	<version>1.0.0.11</version>
+	<version>1.0.0.14</version>
 	<packaging>jar</packaging>
 	
 	<name>MQ Metrics</name>
@@ -23,6 +23,7 @@
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
 		<log4j.version>1.2.17</log4j.version>
+		<mq.version>2.2.6</mq.version>
 	</properties>
 
 	<dependencies>
@@ -51,7 +52,7 @@
 		<dependency>
 			<groupId>com.ibm.mq</groupId>
 			<artifactId>mq-jms-spring-boot-starter</artifactId>
-			<version>2.0.0</version>
+			<version>${mq.version}</version>
 		</dependency>
 
 		<dependency>
