--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
 	<groupId>maersk.com.mq.metrics</groupId>
 	<artifactId>mq-metrics</artifactId>
-	<version>1.0.0.14</version>
+	<version>1.0.0.15</version>
 	<packaging>jar</packaging>
 	
 	<name>MQ Metrics</name>
@@ -97,6 +97,11 @@
     		<groupId>com.fasterxml.jackson.core</groupId>
     		<artifactId>jackson-core</artifactId>
   		</dependency>
+
+		<dependency>
+		    <groupId>org.springframework.boot</groupId>
+		    <artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
 
   
 	</dependencies>
