--- a/src/main/resources/application-dev-qmap01.yaml
+++ b/src/main/resources/application-dev-qmap01.yaml
@@ -14,6 +14,10 @@ spring:
     banner-mode: CONSOLE
   banner:
     location: banner.txt            
+  security:
+    user:
+      name: monitor
+      password: monitor123            
 ibm:
   mq:
     multiInstance: false
