--- a/src/main/resources/application-dev-qmap01.yaml
+++ b/src/main/resources/application-dev-qmap01.yaml
@@ -4,26 +4,22 @@ logging:
       springframework: OFF
     maersk:
       com: INFO
-application:
-  save:
-    metrics:
-     required: false
-     filename: c:\Users\mickm\eclipse-workspace\mq-metrics\mq-metrics\mySavedMetrics.json
 spring:
   main:
     banner-mode: CONSOLE
   banner:
     location: banner.txt            
   security:
-    user:
-      name: monitor
-      password: monitor123            
+     enabled: disabled
+     user:
+       name: monitor
+       password: monitor123            
 ibm:
   mq:
     multiInstance: false
     queueManager: QMAP01
     channel: MQ.MONITOR.SVRCONN
-    connName: localhost(1501)
+    connName: localhost(1501), localhost(1442)
     sslCipherSpec2:
     sslCipherSpec: TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256
     sslCipherSpec1: TLS_ECDHE_RSA_WITH_AES_256_GCM_SHA384
@@ -36,6 +32,17 @@ ibm:
     keepMetricsWhenQueueManagerIsDown: false
     clearMetrics: 5
     ccdtFile1: C:\ProgramData\IBM\MQ\qmgrs\QMAP01\@ipcc\AMQCLCHL.TAB
+    alerts:
+      highqueuedepth:
+         action: MQIA_INHIBIT_PUT
+         queues:
+            queue:
+              queueName: FRED
+# percentage and value are mutually exclusive
+              percentage: 60
+            queue:
+              queueName: "*"
+              percentage: 80              
     json:
       sort: true
       order: ascending
@@ -63,17 +70,15 @@ management:
   endpoints:
     web:
       exposure:
-        include: info, health, prometheus, metrics      
+        include: info, health, prometheus      
   endpoint:
     health:
-      show-details: always        
-  security:
-    enabled: false
+      show-details: always
 info:
   app:
-    name: mq-metrics-1.0.0.15
+    name: mq-metrics-1.0.0.16
     description: IBM MQ Metrics
-    version: 1.0.0.15
+    version: 1.0.0.16
     java:
       version: 1.8.0.0
 server:
